--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Weather App",
-  "name": "Weather App",
+  "short_name": "Weather By Numbers",
+  "name": "Weather By Numbers",
   "icons": [
     {
       "src": "favicon.ico",
